--- a/styles/index.css
+++ b/styles/index.css
@@ -81,14 +81,73 @@ body {
     margin-bottom: 0px;
   }
 }
-@media (min-width:961px){
+@media (min-width: 961px) {
   .aboutme__h2 {
     font-size: 48px;
   }
-  .aboutme__p{
+  .aboutme__p {
     margin-top: 25px;
     font-size: 24px;
     line-height: 1.6;
-    
   }
 }
+
+/* SERVICES CONTENT  */
+
+.services__content {
+  background: linear-gradient(147deg, #000000 0%, rgb(44, 62, 80) 74%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 60px 50px;
+}
+.services__title {
+  color: white;
+  font-size: 48px;
+  font-weight: 800;
+  text-align: center;
+  margin-bottom: 60px;
+}
+.services__template-content {
+  display: grid;
+  gap: 40px;
+}
+@media (min-width: 761px) {
+  .services__title {
+    margin-bottom: 70px;
+  }
+  .services__content {
+    padding: 60px 70px;
+  }
+  .services__template-content {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+.services__card {
+  border: 3px solid white;
+  border-radius: 5px;
+  max-width: 350px;
+  text-align: center;
+  color: white;
+  box-shadow: rgb(130 120 130) 5px 5px 10px;
+  min-width: 190px;
+}
+.services__img {
+  width: 100%;
+  height: 255px;
+  object-fit: fill;
+}
+
+.services__card-info {
+  padding: 10px 15px;
+}
+.services__card-title {
+  font-size: 30px;
+}
+.services__card-parrafo {
+  font-size: 24px;
+}
+
+/* FOOTER CSS PARA COPIAR */
+
